# sphere

./: .eslintrc.json  .gitattributes  README.md  index.html  jest.config.js  package-lock.json  package.json  properties.html  tsconfig.json  vite.config.ts
.github/workflows/: publish.yaml  test.yaml
src/: App.tsx  logger.ts  main.tsx  map.ts  properties.tsx  simple-xml-to-json.d.ts  style.css
src-tauri/: Cargo.toml  rustfmt.toml  tauri.conf.json
src-tauri/assets/geojson-files/: ne_10m_airports.geojson
src-tauri/assets/shape-files/: ne_10m_populated_places.shp  ne_10m_populated_places.shx
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/sphere/: csv.rs  geojson.rs  gpx.rs  mbtiles.rs  mod.rs  shape.rs  source.rs  tilejson.rs
src/components/App/: index.tsx  left.tsx
src/components/AppOverlay/: index.tsx
src/components/AppStateProvider/: index.tsx
src/components/LayerPanel/: index.tsx
src/components/LayersOutline/: Icon.tsx  index.tsx
src/components/LayersPanel/: index.tsx
src/components/LeftSidebar/: LayersTab.tsx  index.tsx  (+2 more)
src/hooks/: useClusters.ts  useCursor.tsx  useDrawControl.ts  useFileDrop.tsx  useMapboxEvent.ts  usePitch.tsx  useZoom.tsx
src/lib/: array.test.ts  array.ts  color-scheme.ts  createPaint.tsx  geojson.ts  http.ts  index.ts  mapbox-protocol.ts  math.test.ts  math.ts  mbtiles.ts  nextId.ts  parseCsv.ts  parseGeojson.tsx  parseGpx.ts  path.test.ts  path.ts  predict-data-type.test.ts  predict-data-type.ts  shape.test.ts  shape.ts  source-reader.test.ts  source-reader.ts  source.ts  sphere-protocol.ts  stat.ts  tauri.ts  time.test.ts  time.ts
src/state/: index.ts  map-style.ts
src/store/: actions.ts  app.ts  draw.ts  error.ts  fog.ts  hooks.ts  index.ts  listeners.ts  map.ts  mapStyle.ts  projection.ts  terrain.ts
src/types/: index.ts  tilejson.ts
(+59 files in other folders)
